# shfit

./: CMakeLists.txt  README.md  genpoints.f90  install_shfit  sphharm.f90  test.f90
example/: genpoints.f90  test.f90
src/: fitting.f90  lebedev.f90  sphharm.f90
